# name-entity-recognition-khmer-chatbot

./: .gitignore  README.md  pyproject.toml  statistics.ipynb  stats.md
dataset/: AskAboutAcademicFee.csv  AskAboutAccountantRoom.csv  AskAboutAge.csv  AskAboutAvailableWorkingSpace.csv  AskAboutCS_CourseInEachGen.csv  AskAboutCanteen.csv  AskAboutCarParkingFee.csv  AskAboutClubInfo.csv  AskAboutCompetition.csv  AskAboutCreator.csv  AskAboutDissatisfaction.csv  AskAboutDistancePhnomPenhToOtherProvince.csv  AskAboutDistrictInProvince.csv  AskAboutDormInfo.csv  AskAboutEC_CourseInEachGen.csv  AskAboutEnrollmentRequirement.csv  AskAboutInterest.csv  AskAboutJobOpportunities.csv  AskAboutLocation.csv  AskAboutMajor.csv  AskAboutMinistry.csv  AskAboutMotocycleParkingFee.csv  AskAboutParkingPrice.csv  AskAboutProvince.csv  AskAboutRegisterDate.csv  AskAboutResearcher.csv  AskAboutSchoolMajors.csv  AskAboutStaffPhoneNumber.csv  AskAboutStaffRoom.csv  AskAboutStudyHour.csv  AskAboutTN_CourseInEachGen.csv  AskAboutTopManagementPersonal.csv  AskAboutTrendingNews.csv  AskAboutWaterRefill.csv  AskAboutWhereIsParkingSpace.csv  AskBuildingInformationInCADT.csv  AskForCompanyInTheInnovationCenter.csv  AskHowToComplain.csv  AskRobot.csv  AskRobotFunction-Sophanon.csv  (+42 more)
datasets/: AskAboutAvailableWorkingSpace.csv  AskAboutCanteen copy.csv  AskAboutClassSubject.csv  AskAboutCountries.csv  AskAboutInstitution.csv  AskAboutMakerspace.csv  AskAboutPlayground.csv  AskAboutResearch.csv  AskAboutResearcher.csv  AskAboutToGetTheWorkingSpace.csv  AskAboutWhereIsParkingSpace.csv  AskRobot.csv  (+14 more)
(+379 files in other folders)
