[tool.poetry]
name = "name-entity-recognition-khmer-chatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pipe = "^2.0"
tensorflow = "^2.10.0"
pytest = "^7.1.3"
pandas = "^1.5.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
